--- a/html/dark/styles.css
+++ b/html/dark/styles.css
@@ -11,7 +11,6 @@ body {
   margin: 0;
   padding: 0;
   background-color: #0d1116;
-  /* background-color: #58a6ff; */
   color: #ffffff;
   line-height: 1.6;
   align-content: left;
@@ -22,23 +21,21 @@ body {
 fieldset {
   display: flex;
   flex-direction: column;
-  border: 4px solid #ffffff;
+  border: 3px solid #ffffff;
   margin-left: 50px;
-  max-width: 400px;
+  max-width: 1050px;
   background-color: rgba(13, 17, 23, 0.9);
 }
 
 .terminal-box {
   display: flex;
   align-items: flex-start;
-  /* background-color: #0d1117;
-  border: 1px solid #30363d; */
+  margin-bottom: -40px;
 }
 
 .terminal-box::before {
   content: ">";
   margin-right: 14px;
-  /* color: rgb(0, 0, 255); */
   font-weight: bold;
 }
 
