--- a/html/light/styles.css
+++ b/html/light/styles.css
@@ -15,30 +15,27 @@ body {
   line-height: 1.6;
   align-content: left;
 }
-
 .japanese {
   font-family: "NineteenNinetyThree-L1Ay", sans-serif;
 }
-
 fieldset {
   display: flex;
   flex-direction: column;
-  border: 4px solid #0d1116;
+  border: 3px solid #0d1116;
   margin-left: 50px;
-  max-width: 400px;
+  max-width: 1050px;
   background-color: rgba(255, 255, 255, 0.9);
 }
 
 .terminal-box {
   display: flex;
   align-items: flex-start;
-  background-color: #ffffff;
+  margin-bottom: -40px;
 }
 
 .terminal-box::before {
   content: ">";
   margin-right: 14px;
-  color: rgb(0, 0, 255);
   font-weight: bold;
 }
 
