--- a/html/dark/styles.css
+++ b/html/dark/styles.css
@@ -5,14 +5,17 @@
 
 * {
   font-family: "NineteenNinetyThree-L1Ay", monospace;
+  /* remove webkit scrollbar */
+  scrollbar-width: none;
 }
 
 body {
-  margin: 0;
+  margin-top: 50;
   padding: 0;
   background-color: #0d1116;
   color: #ffffff;
-  line-height: 1.6;
+  line-height: 1.3;
+  font-weight: bold;
   align-content: left;
 }
 .japanese {
