--- a/html/dark/styles.css
+++ b/html/dark/styles.css
@@ -16,6 +16,7 @@ body {
   color: #ffffff;
   line-height: 1.3;
   font-weight: bold;
+  font-size: 20px;
   align-content: left;
 }
 .japanese {
@@ -26,7 +27,7 @@ fieldset {
   flex-direction: column;
   border: 3px solid #ffffff;
   margin-left: 50px;
-  max-width: 1000px;
+  max-width: 1040px;
   background-color: rgba(13, 17, 23, 0.9);
 }
 
